--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ nav a {
     background: url('images/spots.jpg') no-repeat center center;
     background-size: cover;
     z-index: -1;
-} /* This closing brace was missing */
+} 
 
 .fishing-spots-page {
     color: #ffffff; 
